[package]
name = "helium-proto"
version = "0.1.0"
authors = ["Helium <info@helium.com>"]
edition = "2018"

[features] 
default= []
services=["tonic-build", "tonic"]

[dependencies]
tonic = {version = "0.3", optional = true}
serde = { version = "1.0", features = ["derive"] }
bytes = "0.4"
prost = "0.6"
serde_derive = "1"
serde_json = "1"
base64 = "0.12"
bs58 = {version = "0.3.0", features=["check"]}

[build-dependencies]
tonic-build = {version = "0.3", optional = true}
prost-build = "0.6"
base64 = "0.12"
bs58 = {version = "0.3.0", features=["check"]}
